fix: css alignment #36

--- a/sharetunes-app/src/components/pages/DiscoverPage/discoverPage.module.scss
+++ b/sharetunes-app/src/components/pages/DiscoverPage/discoverPage.module.scss
@@ -96,8 +96,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    top: 0px;
+    justify-content:center ;
     align-items: center;
     align-content: space-between;
     padding: 20px;
@@ -113,6 +112,7 @@
     border-radius: 2px;
     align-self: center;
     margin: 10px;
+    margin-top: 0px;
 }
 
 .header {
